# posix-pogramming

./: .gitignore  CMakeLists.txt  README.md  build-all.sh
io/open_close/: main.c  makefile
io/read_write/: main.c  makefile
ipc/msg/: main.c
ndbm/: main.c  makefile
networking/address/: main.c  makefile
networking/interfaces/list/: main.c  makefile
networking/machine_address/: main.c  makefile
networking/tcp/client/: main.c
networking/tcp/server/: main.c  makefile
networking/udp/client/: main.c  makefile
networking/udp/server/: main.c  makefile
processes/env/: main.c
processes/pid/: main.c  makefile
signals/list/: main.c
signals/set/: main.c  makefile
